--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Run unit tests and coverage test
         id: test-coverage
         run: |
-          TEST_ZONE_NAME=vultr-k8-cm.tk. make test > output.txt
+          TEST_ZONE_NAME=vultr-k8-cm.tk. 
+          make test > output.txt
 
       - name: Transform output
         id: results
