--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,25 +14,13 @@ jobs:
         with:
           go-version: 1.17
       
-      - name: Setup API Key
-        run: |
-          KEY=$(echo -n '${{ secrets.VULTR_API_KEY }}' | base64)
-          cat << EOF > testdata/vultr/api-key.yaml
-          apiVersion: v1
-          kind: Secret
-          metadata:
-            name: vultr-credentials
-            namespace: cert-manager
-          type: Opaque
-          data:
-            apiKey: "${KEY}"
-          EOF
-
       - name: Run unit tests and coverage test
         id: test-coverage
+        env:
+          VULTR_API_KEY: ${{ secrets.VULTR_API_KEY }}
         run: |
-          TEST_ZONE_NAME=vultrtesting.tk. 
-          make test > output.txt
+          bash scripts/setup-api-key.sh
+          TEST_ZONE_NAME=vultrtesting.tk. make test > output.txt
 
       - name: Transform output
         id: results
